- Fix: change le texte d'aide sur les champs de type TextType (chaine pouvant avoir une langue en attribut)
- Evolution: ajout d'une fonction de nettoyage, enlevant les valeurs par défaut, dans le dialogue d'ajout XML d'une métadonnée choisie
- Fix: lors du changement d'un objet le nom du nouveau fichier est pris en compte dans les métadonnées de l'objet

============================================================================
Evolutions/Corrections en 1.7.0

- Evolution: ajout d'une fonction d'export en hiérarchie simplifiée et csv de métadonnées sur disque
- Evolution: ajout d'une fonction d'export en hiérarchie simplifiée et csv de métadonnées dans un zip
- Evolution: ajout d'une fonction d'export d'un fichier csv de métadonnées

============================================================================
Evolutions/Corrections en 1.6.0

- Fix: correction de la gestion des attributs de lang (xml:lang)
- Fix: libellé de la version dans le dialogue 'A propos'
- Fix: disposition correcte des boutons d'édition des métadonnées même si une des métadonnées est très longue
- Fix: fusion des doublons
- Evolution: lecture et écriture des préférences depuis un fichier 'ResipPreferences.properties' soit, par ordre de prise en compte, à côté de l'application soit dans le dossier utilisateur Resip

============================================================================
Evolutions/Corrections en 1.5.0

- Evolution: les log de progression se déclenche non seulement tous les 1000 obets mais aussi toutes les 2 secondes
- Evolution: ajout du double clic sur les lignes des statistiques pour lancer directement la recherche des formats concernés
- Fix: mise à jour de l'arbre des archives lors de la fusion des doublons
- Evolution: ouverture des fichiers d'objets par double clic sur une ligne de la liste d'objets
- Evolution: forte amélioration de performance en recherche de doublons
- Evolution: circulation dans toutes les AU portant des mêmes DOG